tests/negative/semantic/if_condition_array/input.ci
void main() {
    int[] xs = [1];
    if (xs) { print("x\n"); }
}
